# customer-revenue-predictor

./: .gitignore  DEPLOYMENT.md  Dockerfile  FRONTEND_CODE.md  PROJECT_SUMMARY.md  RAILWAY_BUILD_FIX.md  RAILWAY_DEPLOYMENT.md  README.md  START_HERE.md  TROUBLESHOOTING.md  nixpacks.toml  pyproject.toml  requirements.txt  run.py  start.bat  start.sh
app/: __init__.py  config.py  main.py
app/api/: __init__.py  models.py  routes.py
app/ml/: __init__.py  features.py  predictor.py  segmentation.py
app/static/: dashboard.html  index.html  insights.html  predict.html
data/: sample_customers.csv
deployment/: Dockerfile  fly.toml  render.yaml
scripts/: train_model.py
