[project]
name = "customer-revenue-predictor"
version = "1.0.0"
description = "AI-Powered Customer Revenue Prediction System"
authors = [{name = "Mohamed", email = ""}]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "lightgbm>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
